[metadata]
name = zrok
author = NetFoundry
author_email = developers@openziti.org
description = zrok Python SDK
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/openziti/zrok
license = Apache 2.0
project_urls =
    Source = https://github.com/openziti/zrok
    Tracker = https://github.com/openziti/zrok/issues
    Discussion = https://openziti.discourse.group/

[options]
# Find packages in the current directory with no special mapping
package_dir =
    = .
packages = find:

[options.packages.find]
# exclude none
where = .

[flake8]
exclude = zrok_api, build
max-line-length = 120

[versioneer]
VCS = git
style = pep440-pre
versionfile_source = zrok/_version.py
versionfile_build = zrok/_version.py
tag_prefix = v
parentdir_prefix = zrok-
