[metadata]
name = openziti
author = OpenZiti Developers
author_email = developers@openziti.org
description = Ziti Python SDK
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/openziti/zrok
license = Apache 2.0
project_urls =
    Source = https://github.com/openziti/zrok
    Tracker = https://github.com/openziti/zrok/issues
    Discussion = https://openziti.discourse.group/

[options]
package_dir =
   = .
packages = find:

[options.packages.find]
where = .

[versioneer]
VCS = git
style = pep440-pre
versionfile_source = zrok/_version.py
versionfile_build = zrok/_version.py
tag_prefix = v
parentdir_prefix = zrok-
